--- a/HW5.Rmd
+++ b/HW5.Rmd
@@ -259,4 +259,4 @@ plot
 
 ```
 
-The algorithm increases estimated number of clusters as max radius decreases. We expect as max radius decreases the estimated number of clusters decreases. However, in our case, this is not true. We can assume that the algorithm may be sensitive to other variables, like how close the shells are to each other. Using a different threshold may change these results. Smaller threshold (0.8 etc) makes the algorithm more sensitive since the shells are closer to each other. Thus, we can try to make the threshold larger (1.2) for better results. 
+The algorithm usually shows that the estimated number of clusters increases as max radius decreases. Sometimes there is no pattern, and the algorithm fails randomly. We expect as max radius decreases the estimated number of clusters decreases. However, in our case, this is not true. We can assume that the algorithm may be sensitive to other variables, like how close the shells are to each other. Using a different threshold may change these results. Smaller threshold (0.8 etc) makes the algorithm more sensitive since the shells are closer to each other. Thus, we can try to make the threshold larger (1.2) for better results. 
